--- a/scripts/gwas_file/Dockerfile-gwas_file
+++ b/scripts/gwas_file/Dockerfile-gwas_file
@@ -1,15 +1,20 @@
-FROM python:2
+FROM python:3
 
 # Set default work directory
 WORKDIR /app
 
-COPY g2f/requirements.txt ./
+COPY gwas_file/requirements.txt ./
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential r-base \
+    && rm -rf /var/lib/apt/lists/*
+
+RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc', 'R.utils'))"
+
 COPY app.config ./
-COPY g2f_DEGPlot.py ./
-COPY g2f_expPlot.py ./
-COPY GeneSet.py ./
+COPY gwas_file/gwas_file.py ./
+COPY ConfigParser.R ./
+COPY gwas_file/giversID.R ./
 
 # Configure non-root user.
 ARG USERNAME
