--- a/scripts/get_gwas_catalog/Dockerfile-get_gwas_catalog
+++ b/scripts/get_gwas_catalog/Dockerfile-get_gwas_catalog
@@ -1,16 +1,12 @@
-FROM r-base:4.2.3
+FROM python:3
 
 WORKDIR /app
 
-RUN apt-get update && apt-get install -y --no-install-recommends libcurl4-openssl-dev \
-    && rm -rf /var/lib/apt/lists/*
-
-RUN Rscript -e "install.packages(c('rprojroot', 'whereami', 'data.table', 'kimisc', 'BiocManager'))"
-RUN Rscript -e "BiocManager::install('GenomicRanges')"
+COPY get_gwas_catalog/requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
 COPY app.config ./
-COPY ConfigParser.R ./
-COPY SNPannot.R ./
+COPY get_gwas_catalog/getGWAScatalog.py ./
 
 # Configure non-root user.
 ARG USERNAME
